traversal.diagonal.traversaldiagonal.TraversalDiagonal.scala.error
Compilation error:
TraversalDiagonal:25: error: not found: value s
  s=1
  ^TraversalDiagonal:27: error: not found: value s
    while (s!=5){
           ^TraversalDiagonal:29: error: not found: value s
      compteur = compteur - s
                            ^TraversalDiagonal:32: error: not found: value s
        s = s-1
        ^